# sat-css-tool

./: .gitignore  NOTES.md  README.md  all_in_deduct_refactor.py  autemptiness.py  cliqueCSS.py  cmdZ3Wrapper.py  cnflib.py  cssautomaton.py  cssfile.py  cssselect_parser.py  deduct_refactor.py  dimacsWrapper.py  dimacsWrapperFull.py  main.py  pyproject.toml  refactoring.py  requirements.txt  safetrim.py  simpleCSS.py  simplecssbuilder.py  stringcons.py  test.py  wcnf2z3.py  wcnfWrapper.py  z3  z3int.py
Vienna/: Research Groups • Informatics, TU Vienna.html
benchmarks/: 360-stripmq-cleancss.css  360-stripmq-cssmin.css  360-stripmq-cssnano.css  360-stripmq-csso.css  360-stripmq-minify.css  360-stripmq-yui.css  360-stripmq.css  amazon-stripmq-cleancss.css  amazon-stripmq-cssmin.css  amazon-stripmq-cssnano.css  amazon-stripmq-csso.css  amazon-stripmq-minify.css  amazon-stripmq-yui.css  amazon-stripmq.css  archlinux-stripmq-cleancss.css  archlinux-stripmq-cssmin.css  archlinux-stripmq-cssnano.css  archlinux-stripmq-csso.css  archlinux-stripmq-minify.css  archlinux-stripmq-yui.css  archlinux-stripmq.css  arxiv-stripmq-cleancss.css  arxiv-stripmq-cssmin.css  arxiv-stripmq-cssnano.css  arxiv-stripmq-csso.css  arxiv-stripmq-minify.css  arxiv-stripmq-yui.css  baidu-1-stripmq-cleancss.css  baidu-1-stripmq-cssmin.css  baidu-1-stripmq-cssnano.css  baidu-1-stripmq-csso.css  baidu-1-stripmq-minify.css  baidu-1-stripmq-yui.css  baidu-1-stripmq.css  baidu-2-stripmq-cleancss.css  baidu-2-stripmq-cssnano.css  baidu-2-stripmq-csso.css  baidu-2-stripmq-minify.css  baidu-2-stripmq-yui.css  (+447 more)
(+27 files in other folders)
